# xela-server-ros

xela_server/: CMakeLists.txt  package.xml  setup.py
xela_server/config/: config_navigate_tactile_data.json  visualization_config.yaml
xela_server/launch/: grid_map_visualization.launch  navigate_tactile_data.launch  service.launch
xela_server/rviz/: config.rviz  config_sensor1.rviz  config_sensor2.rviz
xela_server/scripts/: navigate_tactile_data.py  tactile_rosbag_record.py  xela_service
xela_server/src/: grid_map_ploter.cpp  uskin_messages_converter.cpp
xela_server/src/xela_server/: __init__.py  load_tactile_data.py
xela_server/srv/: TactileRecord.srv
